--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,138 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+@layer base {
+  * {
+    @apply box-border;
+  }
+  body {
+    @apply bg-background text-foreground font-raleway overflow-x-auto;
+  }
+}
+
+@layer base {
+  :root {
+    --background: #F8F9FA;
+    --foreground: #000000;
+
+    --auth-background: hsla(240, 17%, 98%, 1);
+
+    --ai-chat-card: 0, 0%, 100%, 1;
+    --ai-chat-foreground: #2A3447;
+
+    --sidebar: #ffffff;
+    --sidebar-foreground: #343A40;
+
+    --textarea: #E9ECEF;
+    --textarea-foreground: #6C757D;
+
+    --card: 0, 0%, 100%, 1;
+    --card-foreground: 213, 10%, 18%, 1;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary: 151, 92%, 39%, 1;
+    --primary-foreground: 0, 0%, 100%, 1;
+
+    --secondary: 215, 87%, 54%, 1;
+    --secondary-foreground: 0, 0%, 100%, 1;
+
+    --muted: 210, 40%, 98%, 1;
+    --muted-foreground: 215, 23%, 40%, 1;
+
+    --accent: #DEE2E6;
+    --accent-foreground: #343A40;
+
+    --destructive: 350, 67%, 51%, 1;
+    --destructive-foreground: 0, 0%, 100%, 1;
+
+    --border: #99A3AD;
+    --prompt: #495057;
+    --main: #212529;
+    --heading: #1A1A1A;
+    --nav: #6C757D;
+    --nav-bold: #212529;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+    --ring-primary: hsla(145, 63%, 42%, 0.25);
+    --ring-secondary: hsla(215, 87%, 54%, 0.25);
+
+    --primary-btn-hover-shadow: 2px 2px 0px 2px hsla(151, 92%, 39%, 1);
+    --primary-sm-btn-hover-shadow: 2px 2px 0px 2px hsla(151, 92%, 39%, 1);
+
+    --secondary-btn-hover-shadow: 2px 2px 0px 2px hsla(215, 83%, 52%, 1);
+    --destructive-btn-hover-shadow: 2px 2px 0px 2px hsla(350, 67%, 51%, 1);
+    --secondary-sm-btn-hover-shadow: 2px 2px 0px 2px hsla(215, 87%, 54%, 0.25);
+
+    --info: 214, 84%, 56%, 1;
+    --info-bg: 207, 88%, 94%, 1;
+    --success: 145, 63%, 42%, 1;
+    --success-100: 146, 100%, 97%, 1;
+    --success-200: 151, 100%, 96%, 1;
+    --warning: 40, 96%, 53%, 1;
+    --warning-bg: 54, 100%, 96%, 1;
+
+    --coolgrey: 210, 40%, 96%, 1;
+    --coolgrey-foreground: 216, 26%, 30%, 1;
+
+    --radius: 0.5rem;
+
+    --spacing: 8px;
+    --topbar-height: 64px;
+    --sidebar-width: 280px;
+
+    --skeleton-gradient: rgb(255, 255, 255, 0.30);
+  }
+
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 4px !important;
+  height: 4px;
+  padding-top: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 4px !important;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsla(210, 40%, 96%, 1);
+  border-radius: 4px !important;
+}
