--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,28 +38,84 @@ html {
 
 @layer base {
   :root {
-    --background: #F8F9FA;
+    --background: #f8f9fa;
     --foreground: #000000;
 
-    --auth-background: hsla(240, 17%, 98%, 1);
+    --auth-background: #ffffff;
 
     --ai-chat-card: 0, 0%, 100%, 1;
-    --ai-chat-foreground: #2A3447;
+    --ai-chat-foreground: #2a3447;
 
     --sidebar: #ffffff;
-    --sidebar-foreground: #343A40;
+    --sidebar-foreground: #343a40;
+    --sidebar-active: #dee2e6;
+    --sidebar-active-foreground: #343a40;
+    --sidebar-heading: #343a40;
+    --sidebar-sub: #6c757d;
 
-    --textarea: #E9ECEF;
-    --textarea-foreground: #6C757D;
+    --textarea: #e9ecef;
+    --textarea-foreground: #000000;
+    --textarea-placeholder: #6c757d;
 
-    --card: 0, 0%, 100%, 1;
-    --card-foreground: 213, 10%, 18%, 1;
+    --card: #f8f9fa;
+    --card-foreground: #495057;
+    --card-title: #212529;
+    --card-dropdown: #e9ecef;
+    --card-border: #ced4da;
+    --card-active: #ffffff;
+
+    --nav: #ffffff;
+    --nav-category: #6c757d;
+    --profile: #212529;
+    --profile-sub: #6c757d;
+    --nav-border: #e1e1e1;
+
+    --prompt-btn: #e9ecef;
+    --prompt-btn-foreground: #495057;
+    --prompt-btn-border: #99a3ad;
+    --prompt-btn-active: #ced4da;
+    --prompt-btn-active-foreground: #2a3447;
+
+    --suggestion-card: #f5f5f5;
+    --suggestion-card-title: #2a3447;
+    --suggestion-card-sub: #495057;
+    --suggestion-card-border: #adb5bd;
+
+    --message-card: #e9ecef;
+    --message-card-foreground: #000000;
+
+    --ai-message-card: #f8f9fa;
+    --ai-message-card-foreground: #2a3447;
+
+    --table: #ffffff;
+    --table-foreground: #2a3447;
+    --table-header: #dee2e6;
+    --table-border: #e9ecef;
+
+    --primary: #db353a;
+    --primary-foreground: #ffffff;
+
+    --heading: #1a1a1a;
+    --sub-heading: #495057;
+    --input: #212529;
+    --input-placeholder: #adb5bd;
+    --input-label: #212529;
+    --auth-heading: #000000;
+    --auth-sub-heading: #777777;
+    --input-error: #6c757d;
+    --disabled-btn: #c4c4c4;
+    --prompt: #495057;
+    --error: #ff0000;
+    --app-sub: #495057;
+    --main-categories: #6c757d;
+
+
+    --action: #495057;
+    --border: #99a3ad;
+    --main: #212529;
 
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-
-    --primary: 151, 92%, 39%, 1;
-    --primary-foreground: 0, 0%, 100%, 1;
 
     --secondary: 215, 87%, 54%, 1;
     --secondary-foreground: 0, 0%, 100%, 1;
@@ -67,19 +123,12 @@ html {
     --muted: 210, 40%, 98%, 1;
     --muted-foreground: 215, 23%, 40%, 1;
 
-    --accent: #DEE2E6;
-    --accent-foreground: #343A40;
+    --accent: #dee2e6;
+    --accent-foreground: #343a40;
 
     --destructive: 350, 67%, 51%, 1;
     --destructive-foreground: 0, 0%, 100%, 1;
 
-    --border: #99A3AD;
-    --prompt: #495057;
-    --main: #212529;
-    --heading: #1A1A1A;
-    --nav: #6C757D;
-    --nav-bold: #212529;
-    --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
     --ring-primary: hsla(145, 63%, 42%, 0.25);
     --ring-secondary: hsla(215, 87%, 54%, 0.25);
@@ -108,21 +157,62 @@ html {
     --topbar-height: 64px;
     --sidebar-width: 280px;
 
-    --skeleton-gradient: rgb(255, 255, 255, 0.30);
+    --skeleton-gradient: rgb(255, 255, 255, 0.3);
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
+    --auth-background: #343a40;
+
+    --background: #212529;
     --foreground: 210 40% 98%;
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+    --card: #343a40;
+    --card-foreground: #ced4da;
+    --card-title: #ced4da;
+    --card-border: #495057;
+    --card-active: #5f666d;
+    --card-dropdown: #495057;
+
+    --nav: #343a40;
+    --nav-border: #6c757d;
+    --nav-category: #ced4da;
+    --profile: #ced4da;
+    --profile-sub: #adb5bd;
+
+    --sidebar: #343a40;
+    --sidebar-foreground: #adb5bd;
+    --side-heading: #ced4da;
+    --sidebar-sub: #ced4da;
+    --sidebar-active: #495057;
+    --sidebar-active-foreground: #ffffff;
+
+    --prompt-btn: #343a40;
+    --prompt-btn-foreground: #9aa1a8;
+    --prompt-btn-border: #6c757d;
+    --prompt-btn-active: #212529;
+    --prompt-btn-active-foreground: #9aa1a8;
+
+    --suggestion-card: #212529;
+    --suggestion-card-title: #f5f5f5;
+    --suggestion-card-sub: #ced4da;
+    --suggestion-card-border: #6c757d;
+
+    --message-card: #343a40;
+    --message-card-foreground: #ced4da;
+
+    --ai-message-card: #212529;
+    --ai-message-card-foreground: #ced4da;
+
+    --table: #495057;
+    --table-foreground: #ced4da;
+    --table-header: #666e76;
+    --table-border: #6c757d;
 
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary: #db353a;
+    --primary-foreground: #ffffff;
 
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
@@ -136,6 +226,20 @@ html {
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
 
+    --heading: #ced4da;
+    --sub-heading: #ced4da;
+    --auth-heading: #ced4da;
+    --auth-sub-heading: #ced4da;
+    --input-label: #ffffff;
+    --input-place-holder: #6c757d;
+    --input-error: #ced4da;
+    --prompt: #adb5bd;
+    --app-sub: #ced4da;
+    --main-categories: #ced4da;
+
+
+    --action: #9aa1a8;
+    --main: #ced4da;
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
