--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,6 @@
-@import "tailwindcss";
-
-@theme {
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --background: #ffffff;
@@ -32,7 +29,7 @@ html {
     @apply box-border;
   }
   body {
-    @apply bg-background text-foreground font-raleway overflow-x-auto;
+    @apply bg-background text-foreground overflow-x-auto;
   }
 }
 
@@ -108,7 +105,6 @@ html {
     --error: #ff0000;
     --app-sub: #495057;
     --main-categories: #6c757d;
-
 
     --action: #495057;
     --border: #99a3ad;
@@ -236,7 +232,6 @@ html {
     --prompt: #adb5bd;
     --app-sub: #ced4da;
     --main-categories: #ced4da;
-
 
     --action: #9aa1a8;
     --main: #ced4da;
