--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.baloo-bhaina {
+  font-family: "Baloo Bhaina 2", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Baloo Bhaina';
+  src: url('/fonts/BalooBhaina-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 
 :root {
   --background: #ffffff;
@@ -17,6 +34,9 @@
 body {
   color: var(--foreground);
   background: var(--background);
+  overflow-x: hidden;
+  font-size: 14px;
+  max-width: 100vw !important;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -33,7 +53,7 @@ html {
   }
 }
 
-@layer base {
+
   :root {
     --background: #f8f9fa;
     --foreground: #000000;
@@ -59,6 +79,7 @@ html {
     --card-title: #212529;
     --card-dropdown: #e9ecef;
     --card-border: #ced4da;
+    --logo_tint: #68698A;
     --card-active: #ffffff;
 
     --nav: #ffffff;
@@ -158,7 +179,7 @@ html {
 
   .dark {
     --auth-background: #343a40;
-
+    --logo_tint: #CED4DA;
     --background: #212529;
     --foreground: 210 40% 98%;
 
@@ -239,7 +260,7 @@ html {
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
-}
+
 
 ::-webkit-scrollbar {
   width: 4px !important;
