--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -279,7 +279,7 @@ html {
 
 ::-webkit-scrollbar {
   width: 4px !important;
-  height: 4px;
+  height: 4px !important;
   padding-top: 10px;
 }
 
@@ -289,7 +289,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: hsla(210, 40%, 96%, 1);
+  background-color: #343A40;
   border-radius: 4px !important;
 }
 
@@ -317,4 +317,33 @@ html {
 .rotate-y-4 {
   transform: scaleX(-1) rotate(35deg);
   /* transform: rotate(5deg); */
+}
+
+.top-left {
+  top: 15%;
+  left: -14%;
+}
+
+.top-right {
+  top: 8%;
+  right: 10%;
+}
+
+.middle-left {
+  top: 55%;
+  left: -26%;
+  transform: translateY(-50%);
+}
+.middle-right {
+  top: 50%;
+  right: -22%;
+  transform: translateY(-50%);
+}
+.bottom-left {
+  bottom: 5%;
+  left: 15%;
+}
+.bottom-right {
+  bottom: 18%;
+  right: -10%;
 }
